@@ -19,6 +19,7 @@ v8.3.0
 - BUG#35912790: Binary strings are converted when using prepared statements
 - BUG#35832148: Fix Django timezone.utc deprecation warning
 - BUG#35710145: Bad MySQLCursor.statement and result when query text contains code comments
+- BUG#21390859: STATEMENTS GET OUT OF SYNCH WITH RESULT SETS
 
 v8.2.0
 ======
